# NES_Emulator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  CPU.cpp  CPU.h  bus.cpp  bus.h  definitions.h  main.cpp  main_bus.cpp  main_bus.h  nes_bus.cpp  nes_bus.h  ram.cpp  ram.h  utils.cpp  utils.h
src/SDL_tools/: sdl_events.cpp  sdl_events.h  sdl_graphics.cpp  sdl_graphics.h  sdl_init.cpp  sdl_init.h  sdl_joypad.cpp  sdl_joypad.h
src/cartridge/: cartridge.cpp  cartridge.h  mapper.h
src/cartridge/mappers/: nrom_mapper.cpp  nrom_mapper.h
src/nes/: cpu.cpp  cpu.h  dma_transfer.cpp  dma_transfer.h  events.h  joypad.cpp  joypad.h  main_bus.cpp  main_bus.h  nes.cpp  nes.h  ppu.cpp  ppu.h  ppu_bus.cpp  ppu_bus.h  ram.cpp  utils.cpp  utils.h
src/nes/cartridge/: cartridge.cpp  cartridge.h  mapper.h
src/nes/interfaces/: bus.h  graphics.h
tests/: CMakeLists.txt  main.cpp  utils.h
tests/system/: CmakeLists.txt  nestest.cpp
tests/system/CPU/: CMakeLists.txt  nestest.cpp
tests/system/resources/: f1_race.nes  ms_pac-man.nes  space_invaders.nes
tests/unit/: CMakeLists.txt
tests/unit/CPU/: CMakeLists.txt  addressing_modes_tests.cpp  instructions_test.cpp  utils.h
